# semiteleporter

./: .gitignore  .travis.yml  LICENSE  README.md  _3DScan.ino  install-ballpivoting.sh  proto1_martin.py  sub.py
BallPivoting/: CMakeCache.txt  CMakeLists.txt  Doxyfile  README  cmake_install.cmake  main.cpp  mainpage.dox
BallPivoting/src/: Edge.cpp  Edge.h  Facet.cpp  Facet.h  FileIO.cpp  FileIO.h  Makefile  Mesher.cpp  Mesher.h  Octree.h  OctreeIterator.h  OctreeNode.h  Point.cpp  Point.h  Vertex.cpp  Vertex.h  types.h  utilities.h
camtest/: acquire.py
report/final/: Makefile  report.tex
research/triangulation_2/: triangulation_methode_2.ipynb
research/triangulation_3/: Statistiques.ipynb  Triangulation.ipynb  Triangulation.py  filter.py
research/triangulation_4/: ObjConverter.py  Triangulation.py  douglaspeucker.py  filter.py
src/: check_code.sh  default.cfg  scan.py
src/arduino/: README.md  _3DScan.ino  _3DScanEasydriver.ino  capte.py  test.py
src/arduino/src/: sketch.ino
src/demo/: createScanner3DImage.py  default.cfg  filter_demo.py
src/gui/: __init__.py  tabs.py
src/image_processing/: ObjConverter.py  douglaspeucker.py  filter.py  gui.py  pipeline.py  renderer.py  scanner.py  semiteleporter.py  tests.py  titriangulation.py  triangulation.py
src/mesher/: __init__.py  bpa.py  voxel.py  vtkdelaunay3D.py
src/meshing/: ObjConverter.py  VoxelSpace.py  meshing.py
src/scanner/: arduino.py  camera.py  config.py  douglaspeucker.py  image.py  pipeline.py  scene.py
testimages/: Experiment triangulation.ipynb  README.md
(+4 files in other folders)
